--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- navigation menu-->
     <nav id ="nav_menu">
         <ul>
-            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="./index.html" class="current">Home</a></li>
             <li><a href="">Speakers</a></li>
             <li><a href="">Luncheons</a></li>
             <li><a href="">Tickets</a></li>
