--- a/speakers/c7_sampson.html
+++ b/speakers/c7_sampson.html
@@ -14,6 +14,23 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id ="nav_menu">
+        <ul>
+            <li><a href="../index.html" >Home</a></li>
+            <li><a href="" class="current">Speakers</a></li>
+            <li><a href="">Luncheons</a></li>
+            <li><a href="">Tickets</a></li>
+            <li>
+                <a href="">About Us</a>
+                <ul>
+                    <li><a href="#">Our History</a></li>
+                    <li><a href="#">Board of Directors</a></li>
+                    <li><a href="#">Past Speakers</a></li>
+                    <li><a href="#">Contact Information</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 	<main>
 		<section>
 			<h1>Fossil Threads in the Web of Life</h1>
@@ -52,9 +69,9 @@
 			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 			<h3>January<br><a href="../speakers/chua.html">Amy Chua</a></h3>
 			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="../speakers/c6_sampson.html">Scott Sampson</a></h3>
+			<h3>February<br><a href="../speakers/c7_sampson.html">Scott Sampson</a></h3>
 			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
-			<h3><a href="../c6_index.html">Return to Home page</a></h3>
+			<h3><a href="../index.html">Return to Home page</a></h3>
 		</aside>
 	</main>
 	<footer>
