opens video in a new tab

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			   Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the 
 			   ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number 
 			   of countries in Africa.</p>
-			<p><a href="./speakers/c7_sampson.html">Read More</a> <a href="sampson.mp4">Or play video</a></p>
+			<p><a href="./speakers/c7_sampson.html">Read More</a> <a href="sampson.mp4" target="_blank">Or play video</a></p>
 		</article>
 		<!-- ticket package-->
 		<h2>Our Ticket Packages</h2>
